# handlers/catalogs/routes.go
@@ -16,6 +16,6 @@ func RegisterRoutes(r *gin.RouterGroup) {
 		catalogs.GET("/:catalogID/themes", GetThemesFromCatalog)
 		catalogs.GET("/:catalogID/themes/:themeID", GetThemeDetailsFromCatalog)
 		catalogs.GET("/:catalogID/themes/:themeID/puzzles/:puzzleID", GetPuzzleFromThemeCatalog)
-		catalogs.GET("/:catalogID/themes/:themeID/puzzles/:puzzleID/inputs/:inputID", GetPuzzleInputFromThemeCatalog)
+		catalogs.POST("/puzzle-input", GetPuzzleInputFromThemeCatalog)
 	}
 }
